syntax = "proto3";
import "google/protobuf/empty.proto";
package g2rg;
option cc_generic_services = true;

message StartGameServerRequest
{

}

service G2rgService {
  rpc StartGameServer (StartGameServerRequest) returns (google.protobuf.Empty);
}
